removed reactive stuff from schedule context, it doesn't fit the needs.